# subProjects

./: .gitignore  README.md
libraries/: CMakeLists.txt  README.md
libraries/src/: CMakeLists.txt
libraries/src/doublyLinkedList/: CMakeLists.txt  doublyLinkedList.cpp  doublyLinkedList.hpp
libraries/src/practice/: README.md
libraries/src/singlyLinkedList/: CMakeLists.txt  singlyLinkedList.cpp  singlyLinkedList.hpp
libraries/test/: CMakeLists.txt  test_doublyLinkedList.cpp  test_singlyLinkedList.cpp
libs/: README.md
libs/logging/: log.cpp
libs/src/: CMakeLists.txt
libs/src/logging/: log.cpp
libs/src/singlyLinkedList/: singlyLinkedList.cpp  singlyLinkedList.hpp
logging/: CMakeLists.txt  README.md
logging/src/: CMakeLists.txt  log.cpp  log.hpp  main.cpp
serverClientSocketProgramming/src/: CMakeLists.txt
serverClientSocketProgramming/test/: README.md
simpleShell/: .gitignore  CMakeLists.txt  README.md
simpleShell/src/: CMakeLists.txt
simpleShell/src/log/: CMakeLists.txt  log.c  log.h
simpleShell/src/shell/: CMakeLists.txt  shell.c
simpleShell/test/: CMakeLists.txt  test_log.c
singleServerKeyValueStore/: CMakeLists.txt
singleServerKeyValueStore/src/client/: CMakeLists.txt  client.c
singleServerKeyValueStore/src/server/: CMakeLists.txt
singlyLinkedList/: CMakeLists.txt  README.md
singlyLinkedList/src/: singlyLinkedList.cpp  singlyLinkedList.hpp
singlyLinkedList/test/: CMakeLists.txt  test_singlyLinkedList.cpp
socketProgramming/: CMakeLists.txt  README.md
socketProgramming/src/server/: server.c
